Update PrisonCommand.java